# ClientWarden

./: .gitignore  .gitmodules  CMakeLists.txt  ClientWarden.slnx  README.md  conanfile.txt
designs/: profile1.afdesign  profile2.afdesign  profile3.afdesign  profile4.afdesign
src/: imgui.ini  main.cpp
src/Vault/: CommonVault.h  Vault.cpp  Vault.h  VaultCrypto.cpp  VaultLogin.cpp  VaultManagement.cpp  VaultOnline.cpp  VaultRefresh.cpp  VaultUtils.cpp
src/Vault/CardItem/: CardItem.cpp  CardItem.h
src/Vault/CipherQuery/: CipherQuery.cpp  CipherQuery.h
src/Vault/Folder/: Folder.cpp  Folder.h
src/Vault/IdentityItem/: IdentityItem.cpp  IdentityItem.h
src/Vault/LoginItem/: LoginItem.cpp  LoginItem.h
src/Vault/NoteItem/: NoteItem.cpp  NoteItem.h
src/Vault/PasswordGenerator/: PasswordGenerator.cpp  PasswordGenerator.h
src/Vault/SSHKeyItem/: SSHKeyItem.cpp  SSHKeyItem.h
src/Vault/VaultUtils/: VaultUtils.cpp  VaultUtils.h
src/VaultOld/: Vault.cpp  Vault.h  VaultLogin.cpp  VaultManagement.cpp  VaultOnline.cpp  VaultUtils.cpp
